--- a/EXAMEN-FINAL-DANILO_ESTRELLA.Rmd
+++ b/EXAMEN-FINAL-DANILO_ESTRELLA.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Mensaje a la Nación de Alberto Fujimori 1996"
+title: "Mensaje a la Nación del 1996"
 output: 
   flexdashboard::flex_dashboard:
     orientation: columns
     vertical_layout: fill
     source_code: embed
     logo: logo-peru.png
-    theme: united
+    theme: cerulean
     social: [ "twitter", "facebook", "menu"]
 ---
 
@@ -40,22 +40,22 @@ discurso_fujimori <- tibble(discurso_fujimori) %>%
 ```
 
 
-# BIOGRAFÍA {data-icon="file-tray-stacked-outline"}
+# BIOGRAFÍA {data-icon="ion-easel"}
   
-## **Alberto Fujimori**
+## **Alberto Fujimori** {data-width=400}
 
 ###   
 
 (Alberto Kaynia Fujimori; Lima, 1938) Político peruano, presidente de Perú entre 1990 y 2000. Fundador de la agrupación Cambio 90, ganó las elecciones presidenciales de 1990, derrotando a Vargas Llosa, y puso en marcha un duro plan de ajuste para paliar la grave situación económica. El 5 de abril de 1992, con el apoyo del ejército, encabezó un autogolpe y disolvió el parlamento. Después de sofocar un intento de contragolpe protagonizado por varios militares (13 de noviembre), convocó unas elecciones (6 de diciembre de 1992) para un denominado Congreso Constituyente Democrático, que fueron boicoteadas por los partidos tradicionales de país.  
 La victoria en ellas de la agrupación Nueva Mayoría-Cambio 90 permitió a Fujimori legitimar su golpe de estado y elaborar una nueva constitución acorde con su política. En los comicios de 1995 resultó reelegido por mayoría absoluta; bajo su segundo mandato el país experimentó un crecimiento económico notable, aunque tuvo que afrontar episodios como el secuestro y la posterior liberación de rehenes en la embajada japonesa en Lima (diciembre 1996-abril 1997). En el año 2000 volvió a ser elegido, pero las denuncias de corrupción forzaron su dimisión en noviembre del mismo año.
 
-## 
+## {data-width=600} 
 
 ### 
 
 ![Alberto Kaynia Fujimori](https://www.biografiasyvidas.com/biografia/f/fotos/fujimori.jpg)  
 
-# GRÁFICOS {data-icon="glyphicon-dashboard"}  
+# GRÁFICOS {data-icon="ion-earth"}  
 
 ```{r}
 stopwords_es_1 <- read_excel("CustomStopWords.xlsx")
@@ -81,11 +81,13 @@ discurso_fujimori_frecuencias <- discurso_fujimori %>%
 ```
 
 
-##  
+## {data-width=300}  
 
-### Tabla de frecuencias {data-width = "300"}  
+### Tabla de frecuencias  
 
-Observando los gráficos podemos ver que el discurso del expresidente Alberto Fujimori trata sobre el desarrollo del país, también habla del congreso y del diñero invertido. Modificando el aspecto, más ancho que alto, seguramente corrijas la mayoría de los problemas con los textos, aún así, tienes algunas leyendas, tal vez demasiado largas, puedes probar achicarlas, o bien agregarles saltos de linea ñp25555555555a cada texto.
+Observando los gráficos podemos ver que el discurso del expresidente Alberto Fujimori trata sobre el desarrollo del país, también habla del congreso y del diñero invertido. Modificando el aspecto, más ancho que alto, seguramente corrijas la mayoría de los problemas con los textos, aún así, tienes algunas leyendas, tal vez demasiado largas, puedes probar achicarlas, o bien agregarles saltos de linea ñp25555555555a cada texto.  
+
+### Resumen  
 
 ```{r kableExtra}
 discurso_fujimori_frecuencias %>% kable() %>% 
@@ -112,9 +114,8 @@ discurso_fujimori_frecuencias %>%
        x = "Palabras",
        y = "Frecuencia") +  
   coord_flip() +  
-  transition_states(Token, transition_length = 1, state_length = 1) +  
-  enter_fade() +  
-  exit_fade() -> grafico
+  transition_states(Token, transition_length = 1, state_length = 1) +
+  shadow_mark() -> grafico 
 animate(grafico)
 
 ```  
@@ -125,7 +126,12 @@ animate(grafico)
 discurso_fujimori_frecuencias %>% wordcloud2()
 ```  
 
-# ANÁLISIS DE SENTIMIENTO {data-orientation="rows"}  
+# ANÁLISIS DE SENTIMIENTO {data-orientation="rows" data-icon="ion-ios-star-half"}  
+```{r}
+# si cambiamos la orientacion y queremos cambiar el tamaño de las filas usaremos
+# {data-heigth= }
+```
+
 
 ```{r}
 sentimientos <- read.delim("sentimientos_2.txt")
@@ -142,7 +148,7 @@ discurso_sentimientos <-  discurso_fujimori %>%
 
 ##  
 
-### value box {data-width = "300"}  
+### value box  
 
 ```{r}
 # Convertir la columna sentimiento a numérica, si es posible
